Scan functions for Sequences and Iterable #KT-7657

--- a/libraries/stdlib/jvm/build.gradle
+++ b/libraries/stdlib/jvm/build.gradle
@@ -147,6 +147,10 @@ compileTestKotlin {
     }
 }
 
+compileLongRunningTestKotlin {
+    kotlinOptions.freeCompilerArgs += "-Xuse-experimental=kotlin.ExperimentalStdlibApi"
+}
+
 task longRunningTest(type: Test, dependsOn: longRunningTestClasses) {
     group = "verification"
     testClassesDirs = sourceSets.longRunningTest.output.classesDirs
