Disable NewInference for stdlib tests
 There is one failing test namely `ValByMapExtensionsTest.doTest`, which
 is quite questionable because its checks the use of out projection and
 Exact annotation (see KT-18789)

--- a/libraries/stdlib/common/build.gradle
+++ b/libraries/stdlib/common/build.gradle
@@ -58,7 +58,8 @@ compileTestKotlinCommon {
         freeCompilerArgs += [
                 "-Xuse-experimental=kotlin.Experimental",
                 "-Xuse-experimental=kotlin.ExperimentalUnsignedTypes",
-                "-Xuse-experimental=kotlin.ExperimentalStdlibApi"
+                "-Xuse-experimental=kotlin.ExperimentalStdlibApi",
+                "-XXLanguage:-NewInference"
         ]
     }
 }
