--- a/libraries/stdlib/js-v1/build.gradle
+++ b/libraries/stdlib/js-v1/build.gradle
@@ -155,7 +155,8 @@ compileTestKotlin2Js {
         freeCompilerArgs += [
             "-Xuse-experimental=kotlin.Experimental",
             "-Xuse-experimental=kotlin.ExperimentalUnsignedTypes",
-            "-Xuse-experimental=kotlin.ExperimentalStdlibApi"
+            "-Xuse-experimental=kotlin.ExperimentalStdlibApi",
+            "-XXLanguage:-NewInference"
         ]
     }
 }
