--- a/libraries/stdlib/jdk8/build.gradle
+++ b/libraries/stdlib/jdk8/build.gradle
@@ -88,7 +88,8 @@ compileTestKotlin {
             "-Xmulti-platform",
             "-Xuse-experimental=kotlin.Experimental",
             "-Xuse-experimental=kotlin.ExperimentalUnsignedTypes",
-            "-Xuse-experimental=kotlin.ExperimentalStdlibApi"
+            "-Xuse-experimental=kotlin.ExperimentalStdlibApi",
+            "-XXLanguage:-NewInference"
     ]
 }
 
